# aoc25

./: .env.example  .gitignore  README.md  aoc_helper.py  pyproject.toml
src/aoc25/01/: part1.py
src/aoc25/02/: part1.py  part2.py
src/aoc25/03/: part1.py
src/aoc25/04/: part1.py  part2.py
src/aoc25/05/: part1.py  part2.py
src/aoc25/06/: part1.py  part2.py
src/aoc25/08/: part1.py
